@@ -9,15 +9,17 @@ import java.net.URLEncoder;
 import java.util.Calendar;
 
 /**
+ * This class generates a temporary URL to acces elements in an bucket of Google Cloud Storage
+ *
  * Created by plessmann on 02/05/16.
  */
 public class GcsAppIdentityServiceUrlSigner {
 
 	private static final int EXPIRATION_TIME = 5;
-	private static final String BASE_URL = "https://storage.googleapis.com";
+	private static final String BASE_URL = "https://storage.googleapis.com/%s/%s?GoogleAccessId=%s&Expires=%s&Signature=%s";
 	private static final String BUCKET = "mundo-hablado.appspot.com";
-	private static final String FOLDER = "folder";
-
+	private static final String UTF_8 = "UTF-8";
+	private static final long unitMil = 1000L;
 
 	private final AppIdentityService identityService = AppIdentityServiceFactory.getAppIdentityService();
 
@@ -25,27 +27,13 @@ public class GcsAppIdentityServiceUrlSigner {
 		final long expiration = expiration();
 		final String unsigned = stringToSign(expiration, fileName, httpVerb);
 		final String signature = sign(unsigned);
-
-		return new StringBuilder(BASE_URL).append("/")
-				.append(bucket)
-				.append("/")
-//				.append(FOLDER)
-//				.append("/")
-				.append(fileName)
-				.append("?GoogleAccessId=")
-				.append(clientId())
-				.append("&Expires=")
-				.append(expiration)
-				.append("&Signature=")
-				.append(URLEncoder.encode(signature, "UTF-8")).toString();
+		return String.format(BASE_URL, bucket, fileName, clientId(), String.valueOf(expiration), URLEncoder.encode(signature, UTF_8));
 	}
 
 	private long expiration() {
-		final long unitMil = 1000l;
 		final Calendar calendar = Calendar.getInstance();
 		calendar.add(Calendar.MINUTE, EXPIRATION_TIME);
-		final long expiration = calendar.getTimeInMillis() / unitMil;
-		return expiration;
+		return calendar.getTimeInMillis() / unitMil;
 	}
 
 	private String stringToSign(final long expiration, String filename, String httpVerb) {
@@ -53,20 +41,16 @@ public class GcsAppIdentityServiceUrlSigner {
 		final String contentMD5 = "";
 		final String canonicalizedExtensionHeaders = "";
 		final String canonicalizedResource = "/" + BUCKET + /*"/" + FOLDER +*/ "/" + filename;
-		final String stringToSign = httpVerb + "\n" + contentMD5 + "\n" + contentType + "\n"
+		return httpVerb + "\n" + contentMD5 + "\n" + contentType + "\n"
 				+ expiration + "\n" + canonicalizedExtensionHeaders + canonicalizedResource;
-		return stringToSign;
 	}
 
-	protected String sign(final String stringToSign) throws UnsupportedEncodingException {
-		final AppIdentityService.SigningResult signingResult = identityService
-				.signForApp(stringToSign.getBytes());
-		final String encodedSignature = new String(Base64.encodeBase64(
-				signingResult.getSignature(), false), "UTF-8");
-		return encodedSignature;
+	private String sign(final String stringToSign) throws UnsupportedEncodingException {
+		final AppIdentityService.SigningResult signingResult = identityService.signForApp(stringToSign.getBytes());
+		return new String(Base64.encodeBase64(signingResult.getSignature(), false), UTF_8);
 	}
 
-	protected String clientId() {
+	private String clientId() {
 		return identityService.getServiceAccountName();
 	}
 }
